[package]
name = "embroidery_editor"
version = "0.1.0"
authors = ["kawaiinekololis <marco@ccbluex.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.3", features = ["full"] }
chrono = "0.4"
egui = "0.4.0"
egui_glium = "0.4.0"
nfd2 = "0.2.3"
nom = "6.0.1"
nom-derive = "0.7.0"